--- a/MauiCustoViagem/MauiCustoViagem.csproj
+++ b/MauiCustoViagem/MauiCustoViagem.csproj
@@ -73,7 +73,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Views\VerPedagio.xaml">
+	  <Compile Update="Views\VerViagem.xaml.cs">
+	    <DependentUpon>VerViagem.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\VerViagem.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
