--- a/MauiCustoViagem/MauiCustoViagem.csproj
+++ b/MauiCustoViagem/MauiCustoViagem.csproj
@@ -79,6 +79,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\NovoPedagio.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\VerViagem.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
